<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/backgr"
    android:layout_height="match_parent"
    android:layout_margin="5dp"

    >
    <TextView
        android:layout_marginLeft="25dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/in_fo"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />
    <TextView
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/in_fo2"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:layout_marginLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_fo4"
        tools:layout_editor_absoluteY="8dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="8dp" />
    <TextView
        android:layout_marginLeft="72dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:text="@string/in_fo5"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp" />


</LinearLayout>
